--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
     <body class="">
         <div class="container flex on-phone--column align-items--flex-start extended ">
             <aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -121,11 +121,11 @@
 </aside>
             <main class="main full-width">
     <div class="not-found-card">
-        <h1 class="article-title">Not Found</h1>
-        <h2 class="article-subtitle">This page does not exist.</h2>
+        <h1 class="article-title">404 错误</h1>
+        <h2 class="article-subtitle">页面不存在</h2>
     </div>
     <footer class="site-footer">
-    <section class="copyright">&copy; 2020 Jianbiao Li</section>
+    <section class="copyright">&copy; 2021 Jianbiao Li</section>
     <section class="powerby">
         Built with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> <br />
         Theme <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="1.1.0">Stack</a></b> designed by
