--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
     <body class="article-page keep-sidebar">
         <div class="container flex on-phone--column align-items--flex-start extended ">
             <aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -192,7 +192,7 @@
 
 
         <span class="article-time--modified">
-            Last updated on Oct 09, 2020 00:00 UTC
+            最后更新于 Oct 09, 2020 00:00 UTC
         </span>
     </section></footer>
 
@@ -237,7 +237,7 @@
     
 
     <footer class="site-footer">
-    <section class="copyright">&copy; 2020 Jianbiao Li</section>
+    <section class="copyright">&copy; 2021 Jianbiao Li</section>
     <section class="powerby">
         Built with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> <br />
         Theme <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="1.1.0">Stack</a></b> designed by
