--- a/p/math-typesetting/index.html
+++ b/p/math-typesetting/index.html
@@ -16,7 +16,7 @@
     <body class="">
         <div class="container flex on-phone--column align-items--flex-start extended article-page with-toolbar">
             <aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -262,7 +262,7 @@ $$</p>
     
 
     <footer class="site-footer">
-    <section class="copyright">&copy; 2020 Jianbiao Li</section>
+    <section class="copyright">&copy; 2021 Jianbiao Li</section>
     <section class="powerby">
         Built with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> <br />
         Theme <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="1.1.0">Stack</a></b> designed by
