--- a/search/index.html
+++ b/search/index.html
@@ -16,7 +16,7 @@
     <body class="template-search">
         <div class="container flex on-phone--column align-items--flex-start extended ">
             <aside class="sidebar left-sidebar sticky">
-    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="Toggle Menu">
+    <button class="hamburger hamburger--spin" type="button" id="toggle-menu" aria-label="切换菜单">
         <span class="hamburger-box">
             <span class="hamburger-inner"></span>
         </span>
@@ -122,8 +122,8 @@
             <main class="main full-width">
 <form action="https://aboil.github.io/search/" class="search-form"data-json="https://aboil.github.io/search/index.json">
     <p>
-        <label>Search</label>
-        <input name="keyword" placeholder="Type something..." />
+        <label>搜索</label>
+        <input name="keyword" placeholder="输入关键词..." />
     </p>
 
     <button title="Search">
@@ -142,11 +142,11 @@
 <div class="search-result--list article-list--compact"></div>
 
 <script>
-    window.searchResultTitleTemplate = "#PAGES_COUNT pages (#TIME_SECONDS seconds)"
+    window.searchResultTitleTemplate = "#PAGES_COUNT 个结果 （用时 #TIME_SECONDS 秒）"
 </script><script type="text/javascript" src="/ts/search.js" defer></script>
 
 <footer class="site-footer">
-    <section class="copyright">&copy; 2020 Jianbiao Li</section>
+    <section class="copyright">&copy; 2021 Jianbiao Li</section>
     <section class="powerby">
         Built with <a href="https://gohugo.io/" target="_blank" rel="noopener">Hugo</a> <br />
         Theme <b><a href="https://github.com/CaiJimmy/hugo-theme-stack" target="_blank" rel="noopener" data-version="1.1.0">Stack</a></b> designed by
