添加新博客

--- a/p/解决vs-code安装code-runner插件后输出窗口中文乱码问题python/index.html
+++ b/p/解决vs-code安装code-runner插件后输出窗口中文乱码问题python/index.html
@@ -171,14 +171,35 @@
     <section class="article-content">
     <h2 id="问题描述">问题描述</h2>
 <p>在没有安装Code Runner插件时，运行的代码是在 <strong>终端窗口</strong> 执行的，执行结果没有出现中文乱码。
-<!-- raw HTML omitted -->
+<figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/202101221112288.png" data-size="1225x431">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/202101221112288_hu862a822ee98ab3251f16a04ab4d22b13_46942_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/202101221112288_hu862a822ee98ab3251f16a04ab4d22b13_46942_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/202101221112288.png" width="1225" height="431" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure>
 安装完Code Runner插件后，运行结果会切换到在 <strong>输出窗口</strong> 显示执行结果，同时会出现中文乱码问题，如下：
-<!-- raw HTML omitted -->
+<figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122111607927.png" data-size="937x350">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122111607927_hu90139132efe95df11a39ef4373e87523_33639_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122111607927_hu90139132efe95df11a39ef4373e87523_33639_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122111607927.png" width="937" height="350" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure>
 下面有三种解决方法都能解决，推荐最后一种方法。</p>
 <h2 id="解决方法1">解决方法1</h2>
 <p>简言之，把执行结果再切换回终端窗口执行，
 设置方法是在 <strong>设置</strong> 中勾选<code>Run Terminal</code>即可。再次运行时，执行结果会在 <strong>终端窗口</strong> 显示。
-<!-- raw HTML omitted -->
+<figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112112693.png" data-size="1415x852">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112112693_hu84a5dc4337d2b1f57b8b070769b43952_125203_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112112693_hu84a5dc4337d2b1f57b8b070769b43952_125203_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112112693.png" width="1415" height="852" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure>
 个人不太喜欢这种方法，还是喜欢想PyCharm那样在输出窗口显示执行结果，下面两种方法亲测可用，个人最喜欢最后一种解决方法。</p>
 <h2 id="解决方法2">解决方法2</h2>
 <p>简言之是在 python 代码的开头加上以下代码：</p>
@@ -186,18 +207,48 @@
 <span class="kn">import</span> <span class="nn">io</span>
 <span class="kn">import</span> <span class="nn">sys</span>
 <span class="n">sys</span><span class="o">.</span><span class="n">stdout</span><span class="o">=</span><span class="n">io</span><span class="o">.</span><span class="n">TextIOWrapper</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">stdout</span><span class="o">.</span><span class="n">buffer</span><span class="p">,</span><span class="n">encoding</span><span class="o">=</span><span class="s1">&#39;utf8&#39;</span><span class="p">)</span>
-</code></pre></div><p><!-- raw HTML omitted --></p>
+</code></pre></div><p><figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112934978.png" data-size="969x495">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112934978_hu13e0b0a4099b9b540993d5a73893bd74_57499_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112934978_hu13e0b0a4099b9b540993d5a73893bd74_57499_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122112934978.png" width="969" height="495" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure></p>
 <h2 id="解决方法3">解决方法3</h2>
 <p>简言之在<code>setting.json</code>中修改配置信息。
 找到 python 并设置 <code>set PYTHONIOENCODING=utf8 &amp;&amp; python</code>，过程如下：</p>
 <ul>
 <li>首先打开<code>setting.json</code>文件。
-<!-- raw HTML omitted --></li>
-<li>然后修改python的编码格式：<code>set PYTHONIOENCODING=utf8 &amp;&amp; python</code>
-<!-- raw HTML omitted --></li>
-<li>再来看运行结果
-<!-- raw HTML omitted --></li>
+<figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122113612690.png" data-size="1301x870">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122113612690_hu5ea62fc0b037aef9dd4bbfe876ad1acd_109621_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122113612690_hu5ea62fc0b037aef9dd4bbfe876ad1acd_109621_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122113612690.png" width="1301" height="870" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure></li>
+<li>然后修改python的编码格式：<code>set PYTHONIOENCODING=utf8 &amp;&amp; python</code></li>
 </ul>
+<p><figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114000447.png" data-size="943x517">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114000447_hu441b98a4467aa323bb0b6a82dc41f316_106806_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114000447_hu441b98a4467aa323bb0b6a82dc41f316_106806_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114000447.png" width="943" height="517" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure></p>
+<ul>
+<li>再来看运行结果</li>
+</ul>
+<p><figure>
+		<a href="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114143837.png" data-size="597x308">
+			<img srcset="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114143837_hu0267c0f9d6455926cae7bc32abda3ab3_29207_480x0_resize_box_2.png 480w, /p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114143837_hu0267c0f9d6455926cae7bc32abda3ab3_29207_1024x0_resize_box_2.png 1024w"
+				src="/p/%E8%A7%A3%E5%86%B3vs-code%E5%AE%89%E8%A3%85code-runner%E6%8F%92%E4%BB%B6%E5%90%8E%E8%BE%93%E5%87%BA%E7%AA%97%E5%8F%A3%E4%B8%AD%E6%96%87%E4%B9%B1%E7%A0%81%E9%97%AE%E9%A2%98python/index.assets/20210122114143837.png" width="597" height="308" loading="lazy"
+				alt="&nbsp;">
+		</a>
+		
+	</figure></p>
 
 </section>
 
